--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -33,11 +33,8 @@ colnames(Sumsteps)<- c("Day", "Number of Steps")
 ```
 Plotting the frequency of steps taken per day
 ```{r}
-hist(Sumsteps$`Number of Steps`, breaks = 10, 
-    xlab = "Total Steps", 
-    ylab = "Frequency", 
-    main = "Frequency of Total Steps Taken Per Day", 
-    col = "red")
+rmNAhist<-hist(Sumsteps$`Number of Steps`, breaks = 5, xlab = "Total Steps", ylab = "Frequency", main = "Frequency of Total Steps Taken Per Day with NA Removed", col = "red",ylim = c(0,50) )
+rmNAhist
 ```
 The Mean and Median Steps Taken per Day:
 ```{r}
@@ -51,13 +48,8 @@ median(Sumsteps$`Number of Steps`)
 ```{r}
 dailyact <- aggregate(activity_omitNA$steps ~ activity_omitNA$interval, activity_omitNA, mean)
 
-p2 <- ggplot(dailyact, 
-        aes(x = dailyact$`activity_omitNA$interval`, 
-        y = dailyact$`activity_omitNA$steps`), 
-        xlab = "Interval", 
-        ylab="Average Number of Steps")
-p2 + geom_line(linetype = "solid", size=0.75, color="blue")
-        +xlab("Interval")+ylab("Average Number of Steps")+ggtitle("Average Number of Steps per Interval")
+p2 <- ggplot(dailyact, aes(x = dailyact$`activity_omitNA$interval`, y = dailyact$`activity_omitNA$steps`), xlab = "Interval", ylab="Average Number of Steps")
+p2 + geom_line(linetype = "solid", size=0.75, color="blue")+xlab("Interval")+ylab("Average Number of Steps")+ggtitle("Average Number of Steps per Interval")
 ```
 ## find interval with maximum steps
 
@@ -67,11 +59,45 @@ Interval_Max
 ```
 
 ## Imputing missing values
-## Counting number of intervals with no steps  ##
+## 1.Counting number of intervals with no steps  ##
 ```{r}
 Missingvals<-apply(activity, 1, function(x) sum(is.na(x)))
 sum(Missingvals)
 ```
+Next we subset the data that contains "NA" and replace "NA" with mean steps per day for each interval
+```{r}
+datawithNA<-subset(activity, is.na(activity$steps))
+
+datawithNA[is.na(datawithNA)]<- dailyact$`activity_omitNA$steps`
+```
+Last we merge the original activity_omitNA object that had all "NA" removed with the newly subsetted data where the "NA" was substituted for the mean steps per day for each interval
+
+```{r}
+activity_impute <- rbind(datawithNA, activity_omitNA)
+```
+Lastly we wanted to explore what differences we see in our data if we impute the data by replacing the "NA" values as compared to simply removing all the "NA" values for steps.
+
+First we aggregated the data so that we looked at the sum of all steps on a given day and this will show us the frequency of steps per interval on a given day as was done above when we looked at the data with "NA" removed.
+
+```{r}
+Sumsteps_impute <- aggregate(activity_impute$steps~activity_impute$date, FUN = sum)
+colnames(Sumsteps_impute)<- c("Day", "Number of Steps")
+```
+Next we can see the histogram of the imputed data as well as the mean and median for number of steps per day
+
+```{r}
+imputehist <- hist(Sumsteps_impute$`Number of Steps`, breaks = 5, xlab = "Total Steps", ylab = "Frequency", main = "Frequency of Total Steps Taken Per Day with Imputed NA", col = "purple",ylim = c(0,50))
+mean(Sumsteps_impute$`Number of Steps`)
+median(Sumsteps_impute$`Number of Steps`)
+```
+
+Lastly we will overlay these histograms to better understand what inherent variation we are adding to our data by removing the "NA" data from the data frame
+```{r}
+plot( imputehist, col = "Red", xlab = "Total Steps", ylab = "Frequency", main = "Frequency of Total Steps Taken Per Day: Imputed vs Removed NA", ylim = c(0,50))  # first histogram
+plot( rmNAhist,col = "Blue", add=T)  # second
+legend("topright", c("Imputed Data", "NA-Removed Data"), fill=c("Red", "Blue"))
+```
+Looking at this overlay histogram it shows that by removing the "NA" values we are losing some frequency of steps in the range of intervals between 10,000 and 15,000.  Overall the data fits well and the missing "NA" values may not make a large difference in the overall fit of the data.
 
 ## Are there differences in activity patterns between weekdays and weekends?
 
