--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -24,6 +24,7 @@ activity_omitNA <- na.omit(activity)
 ```
 
 ## What is mean total number of steps taken per day?
+
 ```{r}
 library(ggplot2)
 library(plyr)
@@ -31,12 +32,16 @@ library(plyr)
 Sumsteps <- aggregate(activity_omitNA$steps~activity_omitNA$date, FUN = sum)
 colnames(Sumsteps)<- c("Day", "Number of Steps")
 ```
-Plotting the frequency of steps taken per day
+Plotting the frequency of steps taken per day:
+First we want to see what the average number of steps taken per day.  We see that the number of average number of steps taken per day was aroun 10,000 to 15,000.
+
 ```{r}
 rmNAhist<-hist(Sumsteps$`Number of Steps`, breaks = 5, xlab = "Total Steps", ylab = "Frequency", main = "Frequency of Total Steps Taken Per Day with NA Removed", col = "red",ylim = c(0,50) )
 rmNAhist
 ```
+
 The Mean and Median Steps Taken per Day:
+We also see that the median number of steps taken per day was 10,765 steps and a mean of 10,766 steps per day.
 ```{r}
 mean(Sumsteps$`Number of Steps`)
 median(Sumsteps$`Number of Steps`)
@@ -45,6 +50,8 @@ median(Sumsteps$`Number of Steps`)
 
 ## What is the average daily activity pattern?
 
+When looking at the average daily activity pattern we use the aggregate function to look at the mean number of steps taken per interval on a given day.  With this new data frame we can plot the daily activity and see that the highest daily activity occurs between interval 500 and 1000.
+
 ```{r}
 dailyact <- aggregate(activity_omitNA$steps ~ activity_omitNA$interval, activity_omitNA, mean)
 
@@ -52,6 +59,8 @@ p2 <- ggplot(dailyact, aes(x = dailyact$`activity_omitNA$interval`, y = dailyact
 p2 + geom_line(linetype = "solid", size=0.75, color="blue")+xlab("Interval")+ylab("Average Number of Steps")+ggtitle("Average Number of Steps per Interval")
 ```
 ## find interval with maximum steps
+
+The daily activity plot gives us an idea of the intervals with the most steps, but with it was found that the interval with the highest activity was 835.
 
 ```{r}
 Interval_Max <- dailyact[which.max(dailyact$`activity_omitNA$steps`),1]
@@ -100,8 +109,24 @@ legend("topright", c("Imputed Data", "NA-Removed Data"), fill=c("Red", "Blue"))
 Looking at this overlay histogram it shows that by removing the "NA" values we are losing some frequency of steps in the range of intervals between 10,000 and 15,000.  Overall the data fits well and the missing "NA" values may not make a large difference in the overall fit of the data.
 
 ## Are there differences in activity patterns between weekdays and weekends?
-
+In the last evaluation we wanted to look into the data further and see if there are any differences in activity between the weekdays and weekends.
+In order to do this we created a new column and utilized the weekdays function to classify each date as a day of the week.  After this we can then classify each day as either a day of the weekend or weekday.  With this new data frame with the day classification we can plot two lines plots for weekday data and weekend data.
+When we plot these two variables we see that the majority of the weekday steps are around intervals 800-900, then activity slows down for the remainder for the day.  When compared to the weekend we still see a spike in activity around interval 850-1000, but activity on the weekends differes from that on the weekday because intervals after 1000 continue to spike until interval 2000.
 ```{r}
+days <- weekdays(activity_omitNA[,2])
+activity_omitNA <- cbind(activity_omitNA,days)
+activity_omitNA$days <-
+revalue(activity_omitNA$days, c("Monday"="weekday","Tuesday"="weekday","Wednesday"="weekday","Thursday"="weekday","Friday"="weekday"))
+activity_omitNA$days <- revalue(activity_omitNA$days, c("Saturday"="weekend","Sunday"="weekend"))
+library(reshape2)
+library(lattice)
+activity_meanbyinterv <- tapply(activity_omitNA$steps, list(activity_omitNA$interval, activity_omitNA$days), mean)
+activity_meanbyinterv <- melt(activity_meanbyinterv)
 
-
+colnames(activity_meanbyinterv) <- c("interval", "day", "steps")
+xyplot(activity_meanbyinterv$steps ~ activity_meanbyinterv$interval | activity_meanbyinterv$day, layout=c(1,2), type="l", 
+       main="Time Series Plot of Average of Total Steps", 
+       xlab = "Time intervals (minutes)", 
+       ylab="Average of Total Steps")
 ```
+Thank you for reading my report.
